# Pylon

./: .gitignore  AGENTS.md  CLAUDE.md  LiDAR_Simulation_Crop_Report.md  PROGRESS_TRACKING_IMPROVEMENTS_SUMMARY.md  README.md  README_Environment_Setup.md  RESIZE_MAPS_FIX_SUMMARY.md  STEP3_COMPLETION_SUMMARY.md  d3feat_dev_notes.md  debug_feature_design.md  display_format_analysis.md  faster_data_viewer_plans.md  gmcnet_component_analysis.md  gmcnet_dev_notes.md  implementation_plan.md  improvement_suggestions.md  integration_status.md  lidar_crop_demo.py  main.py  mmcv_compatibility_analysis.md  multi_task_display_implementation_plan.md  pyproject.toml  pytest.ini  race_condition_analysis.md  race_condition_explanation.md  related_files_list.md  setup.py  test_fixed_resize.py  test_minimal_webgl_working.py  test_new_test_cases.py  test_resize_bilinear.py  test_resize_direct.py  test_resize_edge_case.py  test_resize_simple.py  test_standalone_fixed.py  test_step2_imports.py  test_step2_imports_direct.py  test_step3_basic.py  test_step3_direct.py  (+3 more)
agent/: __init__.py  agent.py
agents/: __init__.py  agent_log_parser.py  base_agent.py  daily_summary_generator.py  email_sender.py  launcher.py  logs_snapshot.py  snapshot_diff.py  viewer.py
benchmark_results/: debounce_benchmark_full.json
benchmarks/: __init__.py  benchmark_grid_sampling.py  point_cloud_intersection_benchmark.py
criteria/: __init__.py  auxiliary_outputs_criterion.py  base_criterion.py  ccdm_criterion.py  depth_estimation_criterion.py  instance_segmentation_criterion.py  multi_task_criterion.py  (+3 more)
(+4950 files in other folders)
